--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <!--Navigation Bar - Top of the website with links to other parts of the portfolio-->
         <div class="card text-left navigBar">
             <div class="card-header container-fluid row align-items-start">
-                <h2 class="col ">Gloria Alori - Web Developer</h2>
+                <h2 class="col "style="color: var(--background-color2);" >Gloria Alori - Web Developer</h2>
                 <ul class="col nav nav-tabs card-header-tabs justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link  btn-primary" aria-current="true" href="#about-me">About Me</a>
+                    <li class="nav-item" >
+                        <a class="nav-link  btn-primary" style="color: var(--background-color2);" aria-current="true" href="#about-me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="true" href="#work">Work</a>
+                        <a class="nav-link " style="color: var(--background-color2);" aria-current="true" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="true" href="#skills">Skills</a>
+                        <a class="nav-link "  style="color: var(--background-color2);" aria-current="true" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="true" href="#contact">Contact Me</a>
+                        <a class="nav-link " style="color: var(--background-color2);" aria-current="true" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -51,8 +51,8 @@
         </div>
     </section>
 
-    <!--About me section-->
-    <section id="about-me" class="container-fluid">
+    <!--About me section jumbotron-->
+    <section id="about-me" class=" container-fluid">
         <div class="jumbotron row-align-items-start div row align-items-md-stretch">
             <h2 class="col-2">About Me</h2>
             <div class="col-10">
@@ -90,32 +90,32 @@
     <!--Work section with grid display - and bootstrap cards for each project -->
     <section id="work" class="div row">
         <h2 class="heading col-2">Work</h2>
-        <div class="container col-10">
-            <div class="project3 card">
+        <div class="container  col-10 row row-cols-1 row-cold-md-3 g-4">
+            <div class="project1 h-200 w-100 card md-1">
+                <a href="https://gloal.github.io/frontend-module-two-personal-portfolio/">
+                    <h3>Personal Portfolio</h3>
+                    <p>JavaScript/HTML/CSS</p>
+                </a>
+            </div>
+            <div class="project3 card  h-400 col-6">
                 <a href="https://github.com/cbfacademy/java-currency-converter-assessment-Gloal">
                     <h3>Currency Convertor </h3>
                     <p>Java</p>
                 </a>
             </div>
-            <div class="project2 card">
+            <div class="project2 card h-400 col-6">
                 <a href="https://gloal.github.io/frontend-module-one-website/">
                     <h3>My First Website</h3>
                     <p>HTML/CSS</p>
                 </a>
             </div>
-            <div class="project1 card">
-                <a href="https://gloal.github.io/prework-study-guide/">
-                    <h3>BootCamp Prework</h3>
-                    <p>JavaScript/HTML/CSS</p>
-                </a>
-            </div>
-            <div class="project4 card">
+            <div class="project4 card h-400 col-6">
                 <a href="https://github.com/Gloal/CRM">
                     <h3>Dream Project</h3>
                     <p>HTML/CSS/JavaScript/Java</p>
                 </a>
             </div>
-            <div class="project5 card">
+            <div class="project5 card h-400 col-6">
                 <a href="https://github.com/iamvijay98/Social-Media-App-Frontend">
                     <h3>Dream Project2</h3>
                     <p>JavaScript/CSS/HTML</p>
@@ -127,33 +127,33 @@
     <!--Skills section - List out skills you expect to learn from the bootcamp-->
     <section id="skills" class="div row align-items-md-strech">
         <h2 class="col-2">Skills</h2>
-        <div class="col-10 row-cols-1 row-cols-m-3">
-            <div class="col">
+        <div class="col-10 row-cols-1 row-cols--3">
+            <div class="col mb-2">
                 <div class="card">
                     <h5 class="card-title">JavaScript</h5>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-2">
                 <div class="card">
                     <h5 class="card-title">CSS</h5>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-2">
                 <div class="card">
                     <h5 class="card-title">HTML</h5>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-2">
                 <div class="card">
                     <h5 class="card-title">React</h5>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-2">
                 <div class="card">
                     <h5 class="card-title">Java</h5>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-2 ">
                 <div class="card">
                     <h5 class="card-title">NodeJS</h5>
                 </div>
@@ -184,7 +184,7 @@
                 The above info is not an accurate portfolio - DO NOT call the number
                 listed.
                 <br />
-                &#128519 Do not send an email to the made-up email address either.
+                &#128519 Do not send an email to the made-up email address either &#128526
             </p>
         </div>
     </footer>
