--- a/index.html
+++ b/index.html
@@ -90,32 +90,32 @@
     <!--Work section with grid display - and bootstrap cards for each project -->
     <section id="work" class="div row">
         <h2 class="heading col-2">Work</h2>
-        <div class="container  col-10 row row-cols-1 row-cold-md-3 g-4">
+        <div class="container  col-10 row row-cols-1 row-cols-md-2 g-4 ">
             <div class="project1 h-200 w-100 card md-1">
                 <a href="https://gloal.github.io/frontend-module-two-personal-portfolio/">
                     <h3>Personal Portfolio</h3>
                     <p>JavaScript/HTML/CSS</p>
                 </a>
             </div>
-            <div class="project3 card  h-400 col-6">
+            <div class="project3 card  h-400 ">
                 <a href="https://github.com/cbfacademy/java-currency-converter-assessment-Gloal">
                     <h3>Currency Convertor </h3>
                     <p>Java</p>
                 </a>
             </div>
-            <div class="project2 card h-400 col-6">
+            <div class="project2 card h-400 ">
                 <a href="https://gloal.github.io/frontend-module-one-website/">
                     <h3>My First Website</h3>
                     <p>HTML/CSS</p>
                 </a>
             </div>
-            <div class="project4 card h-400 col-6">
+            <div class="project4 card h-400 ">
                 <a href="https://github.com/Gloal/CRM">
                     <h3>Dream Project</h3>
                     <p>HTML/CSS/JavaScript/Java</p>
                 </a>
             </div>
-            <div class="project5 card h-400 col-6">
+            <div class="project5 card h-400 ">
                 <a href="https://github.com/iamvijay98/Social-Media-App-Frontend">
                     <h3>Dream Project2</h3>
                     <p>JavaScript/CSS/HTML</p>
@@ -127,33 +127,33 @@
     <!--Skills section - List out skills you expect to learn from the bootcamp-->
     <section id="skills" class="div row align-items-md-strech">
         <h2 class="col-2">Skills</h2>
-        <div class="col-10 row-cols-1 row-cols--3">
-            <div class="col mb-2">
+        <div class="col-10 row row-cols-2 row-cols-md-3">
+            <div class=" mb-2">
                 <div class="card">
                     <h5 class="card-title">JavaScript</h5>
                 </div>
             </div>
-            <div class="col mb-2">
+            <div class=" mb-2">
                 <div class="card">
                     <h5 class="card-title">CSS</h5>
                 </div>
             </div>
-            <div class="col mb-2">
+            <div class=" mb-2">
                 <div class="card">
                     <h5 class="card-title">HTML</h5>
                 </div>
             </div>
-            <div class="col mb-2">
+            <div class=" mb-2">
                 <div class="card">
                     <h5 class="card-title">React</h5>
                 </div>
             </div>
-            <div class="col mb-2">
+            <div class=" mb-2">
                 <div class="card">
                     <h5 class="card-title">Java</h5>
                 </div>
             </div>
-            <div class="col mb-2 ">
+            <div class=" mb-2 ">
                 <div class="card">
                     <h5 class="card-title">NodeJS</h5>
                 </div>
